# filehost_rust

./: Cargo.toml  Rocket.toml  flake.nix  shell.nix
src/: main.rs
