[package]
name = "filehost"
version = "0.1.0"
authors = ["Justin Restivo <justin.p.restivo@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
serde_derive = "1.0.106"
names = "0.11.0"
base64 = "0.12.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]