[package]
name = "filehost"
version = "0.1.0"
authors = ["Justin Restivo <justin.p.restivo@gmail.com>"]
edition = "2018"

[dependencies]
rocket = {version = "0.4.7"}
rocket_codegen = "0.4.7"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
rocket_contrib = {version = "0.4.7", default-features = false, features = ["json"]}
names = "0.11.0"
base64 = "0.12.0"
